--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>cs_web</title>
+    <title>CS Demo</title>
     <link rel="manifest" href="manifest.json" />
     <style>
       .loading {
@@ -88,7 +88,7 @@
     </style>
     <script>
       // The value below is injected by flutter build, do not touch.
-      var serviceWorkerVersion = '794426233';
+      var serviceWorkerVersion = '3762770093';
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
