--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </style>
     <script>
       // The value below is injected by flutter build, do not touch.
-      var serviceWorkerVersion = '3762770093';
+      var serviceWorkerVersion = '1041150441';
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
@@ -97,7 +97,7 @@
     <div class="loading">
       <!-- <div class="loader"></div> -->
       <img
-        src="web\favicon.png"
+        src="favicon.png"
         class="img" alt="favicon"
       />
     </div>
